--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h2 {
 
 /* Breakpoints */
 @media screen and (max-width:912px ) {
-    #about-me {
+    .container {
         flex-direction: column;
         margin: 0;
         align-items: center;
