--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+/* *, ::before, ::after {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+} */
+
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 /* Navigation Bar */
@@ -55,6 +64,29 @@ body {
   width:25px;
   margin-right: 10px;
   float:left;
+}
+
+@media screen and (max-width: 912px) {
+    #home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: max-content;
+        margin: 0;
+        padding: 0;
+    }
+    .profile_name {
+        padding: 0;
+    }
+    .topdiv {
+        display: flex;
+        flex-direction: column;
+    }
+    .topmenu {
+        padding: 5px;
+        margin: 0;
+    }
 }
 
 /* Titles */
@@ -121,6 +153,16 @@ h2 {
   /* margin-top:100px; */
 }
 
+@media screen and (max-width:912px) {
+    #about-me h1 {
+        margin-top: 50px;
+    }
+    #about-me p {
+        margin-top: 10px;
+    }
+}
+
+
 /* Breakpoints */
 @media screen and (max-width:912px ) {
     .container {
@@ -177,6 +219,17 @@ h2 {
   justify-content: center;
 }
 
+@media  screen and (max-width: 912px) {
+    #skills {
+        display: flex;
+        flex-direction: column;
+    }
+    #skills h2 {
+        font-size: 35px;
+        margin: 15px auto;
+    }
+}
+
 /* Projects */
 
 .projects-container {
@@ -204,6 +257,37 @@ h2 {
   font-size: 20px;
   margin-left: 30px;
 }
+
+/* Breakpoints */
+@media screen and (max-width:912px ) {
+    #projects {
+        display: flex;
+        flex-direction: column;
+    }
+    #projects h2 {
+        font-size: 35px;
+        margin: 0 auto;
+    }
+    .projects-container {
+        margin-left: 0px;
+    }
+    .project-card {
+        margin: 0px 0px 5px 5px;
+    }
+    .project-card h3 {
+        margin-left: 0px;
+    }
+    .project-card ul {
+        margin: 0 0 0 -10px;
+    }
+    .project-card li {
+        margin-left: 5px;
+    }
+    .projects-container hr {
+        margin: 10px auto;
+        justify-content: center;
+    }
+  }
 
 /* Recommendations */
 
@@ -235,6 +319,26 @@ h2 {
   color: #7600bc;
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
+}
+
+@media screen and (max-width:912px) {
+    #recommendations {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    #recommendations h2 {
+        font-size: 35px;
+        margin: 0 auto;
+    }
+    #all_recommendations {
+        margin-left: 0;
+        padding: 0;
+    }
+    #all_recommendations .recommendation {
+        padding: 5px;
+        height: auto;
+    }
 }
 
 /* Scroll to Top Button */
